--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "fonts": "0.0.2",
     "jquery": "^3.5.1",
     "node-sass": "^5.0.0",
+    "popper.js": "^1.14.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
