--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "eos-icons": "^4.12.0",
     "fonts": "0.0.2",
     "jquery": "^3.5.1",
-    "node-sass": "^5.0.0",
     "popper.js": "^1.14.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
+    "react-typed": "^1.2.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -45,6 +45,7 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.1.0"
+    "gh-pages": "^3.1.0",
+    "node-sass": "^4.14.1"
   }
 }
