--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "eos-icons": "^4.12.0",
     "fonts": "0.0.2",
     "jquery": "^3.5.1",
+    "lightbox2": "^2.11.3",
     "popper.js": "^1.14.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
