--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/jest": "^27.0.1",
+    "@types/node": "^16.7.1",
+    "@types/react": "^17.0.19",
+    "@types/react-dom": "^17.0.9",
     "bootstrap": "^4.5.3",
     "eos-icons": "^4.12.0",
     "fonts": "0.0.2",
@@ -17,6 +21,7 @@
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
     "react-typed": "^1.2.0",
+    "typescript": "^4.3.5",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
