--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio-cv-umbetov",
-  "homepage": "http://chicoumbetov.github.io/portfolio-cv-umbetov",
+  "homepage": "https://chicoumbetov.github.io/portfolio-cv-umbetov",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -21,6 +21,7 @@
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
     "react-typed": "^1.2.0",
+    "styled-components": "^5.3.3",
     "typescript": "^4.3.5",
     "web-vitals": "^0.2.4"
   },
@@ -52,6 +53,6 @@
   },
   "devDependencies": {
     "gh-pages": "^3.1.0",
-    "node-sass": "^4.14.1"
+    "sass": "^1.42.0"
   }
 }
