--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
     "react-typed": "^1.2.0",
+    "scrollmagic": "^2.0.8",
     "styled-components": "^5.3.3",
     "typescript": "^4.3.5",
     "web-vitals": "^0.2.4"
