--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     ]
   },
   "devDependencies": {
+    "@types/styled-components": "^5.1.19",
     "gh-pages": "^3.1.0",
     "sass": "^1.42.0"
   }
